@@ -18,9 +18,10 @@
 
 \usage{
 netconnection(treat1, treat2, studlab, data = NULL, subset = NULL,
-              title = "", warn = FALSE)
+              nchar.trts = 666, title = "", warn = FALSE)
 
-\method{print}{netconnection}(x, digits = max(4, .Options$digits - 3), ...)
+\method{print}{netconnection}(x, digits = max(4, .Options$digits - 3),
+      nchar.trts = x$nchar.trts, ...)
 }
 
 \arguments{
@@ -30,6 +31,8 @@ netconnection(treat1, treat2, studlab, data = NULL, subset = NULL,
   \item{data}{An optional data frame containing the study information.}
   \item{subset}{An optional vector specifying a subset of studies to be used.}
   \item{title}{Title of meta-analysis / systematic review.}
+  \item{nchar.trts}{A numeric defining the minium number of characters
+    used to create unique treatment names.}
   \item{warn}{A logical indicating whether warnings should be printed.}
   \item{x}{An object of class \code{netconnection}.}
   \item{digits}{Minimal number of significant digits, see
@@ -42,7 +45,7 @@ netconnection(treat1, treat2, studlab, data = NULL, subset = NULL,
   \code{print} function. The object is a list containing the following
   components:
 
-  \item{treat1, treat2, studlab, title, warn}{As defined above.}
+  \item{treat1, treat2, studlab, title, warn, nchar.trts}{As defined above.}
   \item{k}{Total number of studies.}
   \item{m}{Total number of pairwise comparisons.}
   \item{n}{Total number of treatments.}
